fix contrast error

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   margin: 0;
   padding: 0;
   padding-bottom: 2em;
+
+  --shadow: 0 2px 10px -1px rgba(0, 0, 0, 0.8);
+  --shadow-accent: 0 2px 50px -1px rgba(0, 0, 0, 0.8);
+  --color-primary: #227452;
 }
 
 body {
@@ -37,7 +41,7 @@ button {
   border: none;
   width: fit-content;
   align-self: center;
-  background: #36b37e;
+  background: var(--color-primary);
   font-weight: 500;
   font-size: 17px;
   letter-spacing: 2px;
@@ -127,7 +131,7 @@ a {
 .port-link:hover,
 .abt-link:hover,
 .contact-link:hover {
-  color: #36b37e;
+  color: var(--color-primary);
 }
 
 h1 {
@@ -142,7 +146,7 @@ h1 {
 }
 
 span {
-  color: #36b37e;
+  color: var(--color-primary);
 }
 
 .home-page {
@@ -224,7 +228,7 @@ span {
   position: relative;
   top: 20px;
   z-index: -1;
-  background: #36b37e;
+  background: var(--color-primary);
   border-radius: 8px;
 }
 
@@ -315,7 +319,7 @@ span {
 
 .card-cat > .cat-tags > li {
   background: white;
-  color: #36b37e;
+  color: var(--color-primary);
   font-size: 12px;
   font-weight: bold;
   letter-spacing: 1px;
@@ -390,7 +394,7 @@ textarea {
 .input-email-form {
   display: flex;
   flex-direction: column;
-  color: #36b37e;
+  color: var(--color-primary);
 }
 
 .input-name {
@@ -401,7 +405,7 @@ textarea {
 .submit-button > small {
   padding: 0;
   margin: 0;
-  color: #36b37e;
+  color: var(--color-primary);
   font-weight: bold;
   letter-spacing: 2px;
   text-align: left;
